Cleanup code
- Update midi-guitar.jar to v1.1.0
- Remove unused imports
- Add linter to gradle config

Signed-off-by: Sean Sundberg <seansund@us.ibm.com>